Fixes Important issue with updater